# autoinvoice

./: .ai-devkit.json
.github/workflows/: build.yml
autoinvoice/: Makefile  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
autoinvoice/src/: App.tsx  index.css  main.tsx
autoinvoice/src-tauri/: Cargo.toml  tauri.conf.json
autoinvoice/src-tauri/src/: error.rs  lib.rs  main.rs
autoinvoice/src-tauri/src/commands/: download.rs  excel.rs  history.rs  mod.rs  settings.rs
autoinvoice/src-tauri/src/services/: browser.rs  captcha.rs  database.rs  downloader.rs  excel_parser.rs  mod.rs
autoinvoice/src/components/download/: CaptchaModal.tsx  DownloadPage.tsx  InvoiceList.tsx  LogViewer.tsx  index.ts
autoinvoice/src/components/history/: BatchDetail.tsx  BatchList.tsx  HistoryPage.tsx  index.ts
autoinvoice/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
autoinvoice/src/components/settings/: SettingsPage.tsx
autoinvoice/src/components/upload/: ExcelUploader.tsx  InvoicePreview.tsx  UploadPage.tsx
autoinvoice/src/hooks/: index.ts  useTauriEvents.ts
autoinvoice/src/store/: downloadSlice.ts  historySlice.ts  index.ts  settingsSlice.ts
autoinvoice/src/types/: index.ts
docs/ai/design/: feature-vnpt-invoice-desktop-app.md
docs/ai/implementation/: feature-vnpt-invoice-desktop-app.md
docs/ai/planning/: feature-vnpt-invoice-desktop-app.md
docs/ai/requirements/: feature-vnpt-invoice-desktop-app.md
docs/ai/testing/: feature-vnpt-invoice-desktop-app.md
ref/: sample.xlsx  sample2.xlsx  vnpt_invoice_downloader.py
