[package]
name = "autoinvoice"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autoinvoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Browser automation
headless_chrome = "1"

# Excel parsing
calamine = "0.24"

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }

# Base64 encoding for captcha images
base64 = "0.22"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# URL parsing
url = "2"

# Error handling
thiserror = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"

# Platform-specific directories
dirs = "5"

